--- a/mudd/mudd.vcxproj
+++ b/mudd/mudd.vcxproj
@@ -88,6 +88,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -139,11 +140,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="concurrent_dungeon.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="mudd_client.cpp" />
+    <ClCompile Include="mudd_server.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="concurrent_dungeon.h" />
+    <ClInclude Include="mudd_client.h" />
+    <ClInclude Include="mudd_server.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
